@@ -29,7 +29,6 @@
 	</spring.osgi.private.pkg>
 	<spring.osgi.import.pkg>
 	  org.apache.commons.logging*,
-	  org.osgi.service.packageadmin;version=1.2,
 	  org.objectweb.asm*;version="[2,3)";resolution:=optional,
 	  javax.swing.*;resolution:=optional,
 	  org.eclipse.*;resolution:=optional,
